--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -61,7 +61,7 @@ html {
 body {
   /* Margin bottom by footer height */
   margin-bottom: 60px;
-  background-color: lightpink;
+  background-color: wheat;
 }
 .footer {
   position: absolute;
